Fix crash with stale indexes

BUG: 451593